--- a/app/components/nav/nav.sass
+++ b/app/components/nav/nav.sass
@@ -11,13 +11,17 @@ title[nav]
     background-color: #fff
     padding: 10px
     box-sizing: border-box
-    
+
 title[nav][expend=true]
     height: 100%
     white-space: normal
 
 button[nav]
     line-height: $navbar_height
+
+button[name=more]
+    position: absolute
+    right: 0
 
 btn-group
     @include prefix(display, flex !important)
