--- a/app/components/popup-menu/popup-menu.sass
+++ b/app/components/popup-menu/popup-menu.sass
@@ -3,6 +3,7 @@
 popup-menu
     position: absolute
     z-index: 50
+    visibility: hidden
     width: auto
     min-width: 80px
     min-height: 25px
@@ -15,7 +16,7 @@ popup-menu
             display: block
             width: 100%
             text-align: left
-            
+
 popup-menu
     panel
         opacity: 0
