--- a/app/components/view/view.html
+++ b/app/components/view/view.html
@@ -17,7 +17,7 @@
         </panel>
     </nav>
     <div id="view-content">
-        <!-- <view-header *ngFor="#a of items.to"></view-header> -->
+        <p type="view-header" *ngFor="#item of items.toArray()"></p>
     </div>
 </div>
 <div id="recipe-item-add-icon">
