--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -67,6 +67,20 @@ content
             height: auto
             box-sizing: border-box
             background-color: #EDE5E2
+            
+            #recipe-add-icon
+                position: absolute
+                z-index: 100
+                bottom: 15px
+                right: 15px
+                width: 45px
+                height: 45px
+                border-radius: 50%
+                overflow: hidden
+                background-color: #777
+                button
+                    font-size: 15px
+                    line-height: 48px
 
 
 
