--- a/app/components/view/view.sass
+++ b/app/components/view/view.sass
@@ -35,6 +35,7 @@
         #view-content
             position: relative
             flex: 1 1 auto
+            overflow-y: auto
             width: 100%
             height: 100%
         toolbox
