--- a/www/components/view/view.css
+++ b/www/components/view/view.css
@@ -32,6 +32,7 @@
     :host #view-inner #view-content {
       position: relative;
       flex: 1 1 auto;
+      overflow-y: auto;
       width: 100%;
       height: 100%; }
     :host #view-inner toolbox {
