--- a/www/components/view/view.html
+++ b/www/components/view/view.html
@@ -17,7 +17,7 @@
         </panel>
     </nav>
     <div id="view-content">
-        <p view-empty-msg></p>
+        <baseline></baseline>
     </div>
 </div>
 <div id="recipe-item-add-icon">
