--- a/app/components/view/view.html
+++ b/app/components/view/view.html
@@ -41,7 +41,7 @@
         <button popup-menu name="foodstuffs" title="foodstuffs"></button>
         <button popup-menu name="cooking-step" title="cooking step"></button>
         <button popup-menu name="picture" title="picture"></button>
-        <button popup-menu name="header" title="header" (click)="addItem('header')"></button>
+        <button popup-menu name="header" title="header" (click)="addNewItem('header')"></button>
         <button popup-menu name="paragraph" title="paragraph"></button>
     </panel>
 </popup-menu>
