--- a/www/components/popup-window/popup-window.html
+++ b/www/components/popup-window/popup-window.html
@@ -2,7 +2,11 @@
 <div class="box">
     <nav>
         <panel id="popup-window-view">
+            <button name="back" title="<<"></button>
+            <title nav>Lables</title>
+            <button name="add" title="A"></button>
+            <button name="edit" title="E"></button>
         </panel>
     </nav>
-    <content></content>
+    <p></p>
 </div>
