--- a/app/components/view/view.html
+++ b/app/components/view/view.html
@@ -1,18 +1,18 @@
 <div id="view-inner">
     <nav>
         <panel id="view-header">
-            <button nav name="back" title="<<" (click)="inactive();"></button>
+            <button name="back" title="<<" (click)="inactive();"></button>
             <title nav>longer supported and will be removed in next major release</title>
             <btn-group>
-                <button nav name="color-sticker" title="CS"></button>
-                <button nav name="edit" title="ED"></button>
-                <button nav name="hold-screen" title="HS"></button>
-                <button nav name="label" title="LB"></button>
-                <button nav name="publish" title="PU"></button>
-                <button nav name="share" title="SH"></button>
-                <button nav name="download" title="DN"></button>
-                <button nav name="delete" title="DL"></button>
-                <button nav name="more" title="더" (click)="allHeaderMenu.toggleActivation();"></button>
+                <button name="color-sticker" title="CS"></button>
+                <button name="edit" title="ED"></button>
+                <button name="hold-screen" title="HS"></button>
+                <button name="label" title="LB"></button>
+                <button name="publish" title="PU"></button>
+                <button name="share" title="SH"></button>
+                <button name="download" title="DN"></button>
+                <button name="delete" title="DL"></button>
+                <button name="more" title="더" (click)="allHeaderMenu.toggleActivation();"></button>
             </btn-group>
         </panel>
     </nav>
@@ -25,23 +25,23 @@
 </div>
 <popup-menu id="all-header-menu">
     <panel>
-        <button popup-menu name="color-sticker" title="color sticker"></button>
-        <button popup-menu name="edit" title="edit"></button>
-        <button popup-menu name="hold-screen" title="hold-screen"></button>
-        <button popup-menu name="label" title="label"></button>
-        <button popup-menu name="publish" title="publish"></button>
-        <button popup-menu name="share" title="share"></button>
-        <button popup-menu name="download" title="download"></button>
-        <button popup-menu name="remove" title="remove" (click)="remove();"></button>
+        <button name="color-sticker" title="color sticker"></button>
+        <button name="edit" title="edit"></button>
+        <button name="hold-screen" title="hold-screen"></button>
+        <button name="label" title="label"></button>
+        <button name="publish" title="publish"></button>
+        <button name="share" title="share"></button>
+        <button name="download" title="download"></button>
+        <button name="remove" title="remove" (click)="remove();"></button>
     </panel>
 </popup-menu>
 <popup-menu flip-up id="all-template" >
     <panel>
-        <button popup-menu name="basic-info" title="basic info"></button>
-        <button popup-menu name="foodstuffs" title="foodstuffs"></button>
-        <button popup-menu name="cooking-step" title="cooking step"></button>
-        <button popup-menu name="picture" title="picture"></button>
-        <button popup-menu name="header" title="header" (click)="createViewComponent('header');"></button>
-        <button popup-menu name="paragraph" title="paragraph"></button>
+        <button name="basic-info" title="basic info"></button>
+        <button name="foodstuffs" title="foodstuffs"></button>
+        <button name="cooking-step" title="cooking step"></button>
+        <button name="picture" title="picture"></button>
+        <button name="header" title="header" (click)="createViewComponent('header');"></button>
+        <button name="paragraph" title="paragraph"></button>
     </panel>
 </popup-menu>
