--- a/app/components/common.sass
+++ b/app/components/common.sass
@@ -3,8 +3,29 @@ $vendors: -webkit- -moz- -ms- -o-
 $sidebar_width: 280px
 $min_sidebar_width: 250px
 $navbar_height: 45px
+$popup_nav_height: 45px
 $min_container_width: 320px
 $max_container_width: $min_container_width * 2
+
+// variables for device resolutions. (dp)
+// - 320 x 480 (mobile small)
+// - 360 x 640 (mobile medium)
+// - 411 x 731 (mobile large)
+// - 480 x 853 (mobile extra large)
+// - 1024 x 768 (tablet)
+// - 1280 x 720 (laptop)
+$screen_w_1: 320px
+$screen_w_2: 360px
+$screen_w_3: 411px
+$screen_w_4: 480px
+$screen_w_5: 768px
+$screen_w_6: 1024px
+$screen_h_1: 480px
+$screen_h_2: 640px
+$screen_h_3: 720px
+$screen_h_4: 731px
+$screen_h_5: 768px
+$screen_h_6: 853px
 
 // variables for view nav-layout
 $nav_button_width: 45px
