--- a/app/components/list/list.sass
+++ b/app/components/list/list.sass
@@ -4,6 +4,7 @@
     position: relative
     flex: 1 1 auto
     overflow-y: auto
+    -webkit-overflow-scrolling: touch
     width: 100%
     height: 100%
     box-sizing: border-box
