--- a/app/components/popup-window/popup-labels/popup-labels.html
+++ b/app/components/popup-window/popup-labels/popup-labels.html
@@ -1,18 +1,19 @@
 <div class="bg" [attr.active]="_bgActivation" (click)="close();"></div>
-<div class="box" [attr.active]="_boxActivation">
+<div class="box" [attr.active]="_boxActivation" [attr.editing]="_editing">
     <div class="inner-wrapper">
         <nav>
             <panel id="popup-labels-view">
                 <button name="back" title="<<" (click)="close();"></button>
                 <title nav>Lables</title>
                 <button name="add" title="A" (click)="add();"></button>
-                <button name="edit" title="E"></button>
+                <button name="edit" title="E" (click)="enterEditMode();"></button>
             </panel>
         </nav>
-        <div class="content">
+        <section class="content">
             <ul>
-                <li *ngFor="#labelData of _labelService.labels.toArray()"><input type="checkbox"/><label class="title">my custom item1</label><button remove name="remove" title="X"></button></li>
+                <li *ngFor="#labelData of (_labelService.labels.toArray() | exceptRemoved)"><input type="checkbox"/><label class="title">{{labelData.name}}</label><button remove name="remove" title="X" (click)="removeLabel(labelData.id);"></button></li>
             </ul>
-        </div>
+        </section>
+        <section class="bottom"></section>
     </div>
 </div>
