--- a/app/components/popup-window/popup-labels/popup-labels.sass
+++ b/app/components/popup-window/popup-labels/popup-labels.sass
@@ -1,29 +1,33 @@
 @import '../../common'
 
 :host
-    .content
-        box-sizing: border-box
-        max-height: calc(100% - 20px)
-        height: auto
-        top: 0
-        bottom: 0
-        overflow-y: auto
-        ul
-            box-sizing: border-box
-            list-style-type: none
-            padding: 0 24px
-            margin: 20px 0
-            li
-                display: flex
-                flex-wrap: nowrap
-                flex-flow: space-between
-                align-items: center
+    align-items: flex-start
+    top: 10%
+    .box
+        section.content
+            ul
                 box-sizing: border-box
-                width: 100%
-                min-height: 48px
-                padding: 0
-                .title
+                list-style-type: none
+                padding: 0 24px
+                transition: $transition_default
+                li
+                    display: flex
+                    flex-wrap: nowrap
+                    flex-flow: space-between
+                    align-items: center
+                    box-sizing: border-box
                     width: 100%
-                button[remove]
-                    line-height: 48px
-                    width: 48px
+                    min-height: 48px
+                    padding: 0
+                    .title
+                        width: 100%
+                    button[remove]
+                        display: none
+                        line-height: 48px
+                        width: 48px
+    .box[editing=true]
+        section.content
+            ul
+                li
+                    button[remove]
+                        display: inline-block
