--- a/app/components/view/view.sass
+++ b/app/components/view/view.sass
@@ -31,6 +31,7 @@
             position: relative
             flex: 1 1 auto
             overflow-y: auto
+            -webkit-overflow-scrolling: touch
             width: 100%
             height: 100%
         toolbox
@@ -65,8 +66,6 @@
         button
             font-size: 15px
             line-height: 48px
-
-
 
 // media query for view nav-buttons
 @media screen and (max-width: $width_level1)
