--- a/www/components/popup-window/popup-labels/popup-labels.css
+++ b/www/components/popup-window/popup-labels/popup-labels.css
@@ -1,16 +1,12 @@
-:host .content {
-  box-sizing: border-box;
-  max-height: calc(100% - 20px);
-  height: auto;
-  top: 0;
-  bottom: 0;
-  overflow-y: auto; }
-  :host .content ul {
+:host {
+  align-items: flex-start;
+  top: 10%; }
+  :host .box section.content ul {
     box-sizing: border-box;
     list-style-type: none;
     padding: 0 24px;
-    margin: 20px 0; }
-    :host .content ul li {
+    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); }
+    :host .box section.content ul li {
       display: flex;
       flex-wrap: nowrap;
       flex-flow: space-between;
@@ -19,8 +15,11 @@
       width: 100%;
       min-height: 48px;
       padding: 0; }
-      :host .content ul li .title {
+      :host .box section.content ul li .title {
         width: 100%; }
-      :host .content ul li button[remove] {
+      :host .box section.content ul li button[remove] {
+        display: none;
         line-height: 48px;
         width: 48px; }
+  :host .box[editing=true] section.content ul li button[remove] {
+    display: inline-block; }
