--- a/www/components/view/view.css
+++ b/www/components/view/view.css
@@ -28,6 +28,7 @@
       position: relative;
       flex: 1 1 auto;
       overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
       width: 100%;
       height: 100%; }
     :host #view-inner toolbox {
