--- a/app/components/popup-window/popup-labels/popup-labels.html
+++ b/app/components/popup-window/popup-labels/popup-labels.html
@@ -5,8 +5,12 @@
             <panel id="popup-labels-view">
                 <button name="back" title="<<" (click)="close();"></button>
                 <title nav>Lables</title>
-                <button name="add" title="A" (click)="add();"></button>
                 <button name="edit" title="E" (click)="enterEditMode();"></button>
+            </panel>
+            <panel id="popup-labels-view">
+                <button name="back" title="<<" (click)="close();"></button>
+                <title nav>Edit</title>
+                <button name="add" title="A" (click)="add();"></button>
             </panel>
         </nav>
         <section class="content">
