--- a/app/components/common.sass
+++ b/app/components/common.sass
@@ -36,7 +36,7 @@ $width_level4: $max_container_width + $min_sidebar_width
 $width_level5: $max_container_width + $min_sidebar_width + 250
 
 // animation
-$transition_default: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1)
+$transition_default: all 0.4s
 
 // Mixin
 @mixin prefix($name, $value)
