--- a/app/components/popup-window/popup-labels/popup-labels.sass
+++ b/app/components/popup-window/popup-labels/popup-labels.sass
@@ -4,6 +4,9 @@
     align-items: flex-start
     top: 10%
     .box
+        nav
+            height: $popup_nav_height
+            
         section.content
             ul
                 box-sizing: border-box
