--- a/app/components/popup-window/popup-window.sass
+++ b/app/components/popup-window/popup-window.sass
@@ -49,7 +49,8 @@
         .inner-wrapper
             opacity: 1
             transform: rotateY(0deg)
-            
+    .box nav #popup-labels-edit *
+            background-color: #e5cd6c
     section.content
         max-height: 280px - $popup_nav_height
         transition: $transition_default
