--- a/www/components/view/view.css
+++ b/www/components/view/view.css
@@ -93,4 +93,4 @@
     top: 0;
     height: 100%;
     transform: translateX(0);
-    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); } }
+    transition: all 0.4s; } }
