--- a/www/components/popup-window/popup-labels/popup-labels.html
+++ b/www/components/popup-window/popup-labels/popup-labels.html
@@ -24,7 +24,7 @@
                 <li *ngFor="#labelData of (_labelService.labels.toArray() | exceptRemoved)">
                     <input type="checkbox"/>
                     <label class="title">{{labelData.name}}</label>
-                    <button remove name="remove" title="X" (click)="removeLabel(labelData.id);"></button>
+                    <button remove animate name="remove" title="X" (click)="removeLabel(labelData.id);"></button>
                 </li>
             </ul>
         </section>
