--- a/app/components/popup-window/popup-labels/popup-labels.html
+++ b/app/components/popup-window/popup-labels/popup-labels.html
@@ -22,9 +22,10 @@
         <section class="content">
             <ul>
                 <li *ngFor="#labelData of (_labelService.labels.toArray() | exceptRemoved)">
-                    <input type="checkbox"/>
+                    <button animate name="move" title="="></button>
+                    <input name="chk-label" type="checkbox"/>
                     <label class="title">{{labelData.name}}</label>
-                    <button remove animate name="remove" title="X" (click)="removeLabel(labelData.id);"></button>
+                    <button animate name="remove" title="X" (click)="removeLabel(labelData.id);"></button>
                 </li>
             </ul>
         </section>
